--- a/app/src/main/res/layout/activity_media_info.xml
+++ b/app/src/main/res/layout/activity_media_info.xml
@@ -30,7 +30,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/dp_2"
             android:background="@color/colorPrimary" />
 
         <androidx.appcompat.widget.AppCompatTextView
